# Python-DBoW3

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  setup.py
DBow3/lib/cmake/DBoW3/: DBoW3Config.cmake
DBow3/src/: BowVector.cpp  CMakeLists.txt  Vocabulary.cpp
src/: ndarray_converter.h  opencv_type_converter.h  pydbow3.cpp
src/funtional/: bow_frame_database.h  bow_search_fn.h
src/wrapper/: wrapper_database.h  wrapper_vocabulary.h
tests/: test.py
